<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-504dp"
        tools:layout_editor_absoluteY="-788dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_marginTop="30dp"
            android:text="@string/first_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name" />

        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_marginTop="30dp"
            android:text="@string/last_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editTextSurName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/age"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:inputType="number"
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_marginTop="30dp"
            android:text="@string/profession"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:id="@+id/editTextProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_profession" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_marginTop="30dp"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:inputType="phone"
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge"	/>

        <EditText
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
