<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/name"
                android:text="@string/first_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/showNom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/last_name"
                android:text="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
            android:id="@+id/showPrenom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/email"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/showEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/age"
                android:text="@string/age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/showAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/prof"
                android:text="@string/profession"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/showProf"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/phoneImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/phone_image"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="16dp"
                android:layout_marginTop="35dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <Button
        android:id="@+id/callButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/call" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/returning" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>